--- a/D0B08F08D.opf/index.yml
+++ b/D0B08F08D.opf/index.yml
@@ -4,8 +4,8 @@ revision: '00001'
 annotations:
   1776ed1a355f474481a616a0037a82aa:
     parts: {}
+    work_id: D4103
     span:
-    - vol: 83
+    - base: be70
       start: 0
       end: 133541
-    work_id: D4103
